# xpns

./: .flaskenv  .gitignore  README.md  config.py  data-dev.sqlite  data-dev.sqlite.bak  desktop.ini  pyproject.toml  ruff.toml  xpns.py
app/: __init__.py  db.py  forms.py  models.py  routes.py  utils.py
app/templates/: add_building.html  add_expense.html  add_group.html  add_resident.html  add_transaction.html  add_unit.html  base.html  edit_tables.html  edit_unit.html  index.html  login.html  mgr_options.html  preferences.html  print_index.html  register.html  view_details.html  view_expenses.html  view_units.html
migrations/versions/: 0d4902a47e00_new_rename_including_vacant_units.py  10d0b367eae5_added_cash_reserves_table_under_building.py  1116f0f4b2bf_column_rename_cashreserve_primary_key.py  20976d5517bb_user_model_added.py  27f46e92c19e_add_is_manager_to_users_and_preferences_.py  32d3d8951815_rename_column_allotting_spelling_.py  387177b054b3_forgot_another_null_constraint.py  42755bd9963d_email_adde_to_user.py  44500fdda18a_columns_droped_including_vacant_units_.py  4d9a60ff94a0_cleaned___tablename__.py  566652f978b6_set_members_shares_back_to_dict_json.py  5ded6ff114c7_forgot_1_null_constraint.py  5e4e2f502d28_initial_migration.py  748d1e425441_member_share_changed.py  7bdcab2edd70_relationship_unit_shares.py  81c3016a652c_shares_period_changed_to_shares_paid_.py  864655696bbc_group_table_updated.py  8adcc86be407_expense_fk_cascade_and_repr_for_all.py  b490a732c104_new_relationship_group_expense.py  b9be230562ec_group_table_updated_to_have_options_.py  (+7 more)
