[project]
name = "xpns"
version = "0.3.1"
description = "an app to Share Expenses of Apartment Buildings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.38",
    "wtforms>=3.2.1",
    "jdatetime>=4.1.1",
]
